// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the html structure of the dynamic logo, backend configured 1`] = `
<body>
  <div>
    <div
      class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
    >
      <div
        class="sc-4f028913-0 evuomw shadow-lg container-sm"
      >
        <p
          class="sc-4f028913-1 gEWSz className"
        >
          Test Site
        </p>
        <img
          alt="logo-arrow"
          class="sc-4f028913-2 dRUIFh"
          data-nimg="1"
          decoding="async"
          height="250"
          loading="lazy"
          src="/arrow.svg"
          style="color: transparent;"
          width="250"
        />
        <div
          class="sc-4f028913-3 sc-4f028913-4 bMgDxG cYGczG"
        >
          <div
            class="sc-4156641b-2 eJmZUk rounded-lg shadow-lg ratio ratio-7x5"
          >
            <img
              alt="Card 6"
              class="sc-4156641b-1 hdzYhz card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src=""
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-5 bMgDxG kJEauP"
        >
          <div
            class="sc-4156641b-2 eJmZUk rounded-lg shadow-lg ratio ratio-7x5"
          >
            <img
              alt="Card 1"
              class="sc-4156641b-1 hdzYhz card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src=""
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-6 bMgDxG LGxBR"
        >
          <div
            class="sc-4156641b-2 eJmZUk rounded-lg shadow-lg ratio ratio-7x5"
          >
            <img
              alt="Card 2"
              class="sc-4156641b-1 hdzYhz card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src=""
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-7 bMgDxG eggqud"
        >
          <div
            class="sc-4156641b-2 eJmZUk rounded-lg shadow-lg ratio ratio-7x5"
          >
            <img
              alt="Card 3"
              class="sc-4156641b-1 hdzYhz card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src=""
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-8 bMgDxG cZGZSp"
        >
          <div
            class="sc-4156641b-2 eJmZUk rounded-lg shadow-lg ratio ratio-7x5"
          >
            <img
              alt="Card 4"
              class="sc-4156641b-1 hdzYhz card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src=""
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`the html structure of the dynamic logo, no backend configured 1`] = `
<body>
  <div>
    <div
      class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
    >
      <div
        class="sc-4f028913-0 evuomw shadow-lg container-sm"
      >
        <p
          class="sc-4f028913-1 gEWSz className"
        >
          MPC Autofill
        </p>
        <img
          alt="logo-arrow"
          class="sc-4f028913-2 dRUIFh"
          data-nimg="1"
          decoding="async"
          height="250"
          loading="lazy"
          src="/arrow.svg"
          style="color: transparent;"
          width="250"
        />
        <div
          class="sc-4f028913-3 sc-4f028913-4 bMgDxG cYGczG"
        >
          <div
            class="sc-4156641b-2 kAwxCW rounded-lg shadow-lg ratio ratio-7x5"
          >
            <div
              class="d-flex justify-content-center align-items-center"
            >
              <div
                class="sc-ff15f3e1-0 jebGLu spinner-border"
                role="status"
                size="4"
              >
                <span
                  class="visually-hidden"
                >
                  Loading...
                </span>
              </div>
            </div>
            <img
              alt="Your Design Here"
              class="sc-4156641b-1 hdALjG card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
              srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-5 bMgDxG kJEauP"
        >
          <div
            class="sc-4156641b-2 kAwxCW rounded-lg shadow-lg ratio ratio-7x5"
          >
            <div
              class="d-flex justify-content-center align-items-center"
            >
              <div
                class="sc-ff15f3e1-0 jebGLu spinner-border"
                role="status"
                size="4"
              >
                <span
                  class="visually-hidden"
                >
                  Loading...
                </span>
              </div>
            </div>
            <img
              alt="Your Design Here"
              class="sc-4156641b-1 hdALjG card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
              srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-6 bMgDxG LGxBR"
        >
          <div
            class="sc-4156641b-2 kAwxCW rounded-lg shadow-lg ratio ratio-7x5"
          >
            <div
              class="d-flex justify-content-center align-items-center"
            >
              <div
                class="sc-ff15f3e1-0 jebGLu spinner-border"
                role="status"
                size="4"
              >
                <span
                  class="visually-hidden"
                >
                  Loading...
                </span>
              </div>
            </div>
            <img
              alt="Your Design Here"
              class="sc-4156641b-1 hdALjG card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
              srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-7 bMgDxG eggqud"
        >
          <div
            class="sc-4156641b-2 kAwxCW rounded-lg shadow-lg ratio ratio-7x5"
          >
            <div
              class="d-flex justify-content-center align-items-center"
            >
              <div
                class="sc-ff15f3e1-0 jebGLu spinner-border"
                role="status"
                size="4"
              >
                <span
                  class="visually-hidden"
                >
                  Loading...
                </span>
              </div>
            </div>
            <img
              alt="Your Design Here"
              class="sc-4156641b-1 hdALjG card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
              srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="sc-4f028913-3 sc-4f028913-8 bMgDxG cZGZSp"
        >
          <div
            class="sc-4156641b-2 kAwxCW rounded-lg shadow-lg ratio ratio-7x5"
          >
            <div
              class="d-flex justify-content-center align-items-center"
            >
              <div
                class="sc-ff15f3e1-0 jebGLu spinner-border"
                role="status"
                size="4"
              >
                <span
                  class="visually-hidden"
                >
                  Loading...
                </span>
              </div>
            </div>
            <img
              alt="Your Design Here"
              class="sc-4156641b-1 hdALjG card-img card-img-fade-in"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
              srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
